[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guard-rails"
version = "0.1.0"
description = "Composable output guardrails for LLM responses — MaxLength, ForbiddenPhrase, Regex, Custom, with and/or/not combinators. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agents", "llm", "guardrails", "output-validation", "safety"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-guard-rails"

[tool.setuptools.packages.find]
where = ["src"]
